cicd-gitlab-example/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diplom-svc
spec:
  selector:
    app: web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
